@@ -5,76 +5,41 @@
 
 local M = {}
 
-local T = require"luainspect.types"
+local LI = require"luainspect.init"
+
+
+local function escape(s)
+  -- s = s:gsub('\n', '\\n') -- escape new lines
+  s = s:gsub('"', '""') -- escape double quotes
+  if s:match'["\r\n,]' then s = '"'..s..'"' end -- escape with double quotes
+  return s
+end
+
+
+local function describe(token, tokenlist, src)
+  if token then
+    local ast = token.ast
+    if token.tag == 'Id' or ast.isfield then
+      local line = 'id'
+      if ast.id then line = line .. ",id" .. ast.id end
+      line = line .. ',' .. escape(table.concat(LI.get_var_attributes(ast),' '))
+      line = line .. ',' .. escape(LI.get_value_details(ast, tokenlist, src):gsub('\n', ';'))
+      return line
+    end
+  end
+end
+
 
 function M.ast_to_delimited(ast, src, tokenlist)
   local fmt_tokens = {}
   for _, token in ipairs(tokenlist) do
     local fchar, lchar = token.fpos, token.lpos
-    local desc = describe(token)
+    local desc = describe(token, tokenlist, src)
     if desc then
       fmt_tokens[#fmt_tokens + 1] = ("%d,%d,%s\n"):format(fchar, lchar, desc)
     end
   end
   return table.concat(fmt_tokens)
-end
-
-
-function describe(token)
-  if token then
-    local ast = token.ast
-    if token.tag == 'Id' or ast.isfield then
-      local class = 'id'
-
-      if ast.id then
-        class = class .. ",id" .. ast.id
-      elseif ast.id then
-        class = class .. ",id" .. ast.localdefinition.id
-      end
-
-
-      if ast.localdefinition then
-        class = class .. ',local'
-        if ast.functionlevel > ast.localdefinition.functionlevel then
-          class = class .. ',upvalue'
-        end
-        if not ast.localdefinition.isused then
-          class = class .. ',unused'
-        end
-        if ast.localdefinition.isset then
-          class = class .. ',mutatebind'
-        else
-          class = class .. ',constbind'
-        end
-        if ast.isparam then
-          class = class .. ',param'
-        end
-        if ast.localmasking then
-          class = class .. ',masking'
-        end
-        if ast.localmasked then
-          class = class .. ',masked'
-        end
-      elseif ast.isfield then
-        class = class .. ',field'
-        local val = ast.seevalue.value
-        if ast.definedglobal or val ~= T.universal and not T.iserror[val] and val ~= nil then
-          class = class .. ',recognized'
-        else
-          class = class .. ',unrecognized'
-        end
-      else -- global
-        class = class .. ',global'
-        if ast.definedglobal then
-          class = class .. ',recognized'
-        else
-          class = class .. ',unrecognized'
-        end
-      end
-
-      return class
-    end
-  end
 end
 
 
